# Sentinel.dev

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  run_sentinel_demo.py
.devcontainer/: devcontainer.json
.github/workflows/: sentinel.yml
dashboard/: next.config.ts  package-lock.json  package.json
dashboard/app/: layout.tsx  page.tsx  styles.css
dashboard/app/api/report/: route.ts
dashboard/app/api/reports/: route.ts
dashboard/app/components/: KnowledgeGraph.tsx  TerminalLog.tsx
dashboard/app/data/: projects.ts
dummy_target/: domain.py  main.py
dummy_target/graphify-out/: graph.json
dummy_target/tests/: test_main.py
dummy_targets/: __init__.py
dummy_targets/memory_leak/: __init__.py  main.py  test_main.py
dummy_targets/race_condition/: __init__.py  main.py  test_main.py
dummy_targets/redos_attack/: __init__.py  main.py  requirements.txt  test_main.py
sentinel/: __init__.py  __main__.py  cli.py  gitops.py  graph_memory.py  sandbox.py  schemas.py  swarm_agents.py
tests/: test_agents.py  test_graph_memory.py  test_sandbox.py
