[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "sentinel-dev"
version = "0.1.0"
description = "AST-aware chaos testing and guarded self-healing for local CI/CD."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Sentinel.dev" }]
dependencies = [
  "docker>=7.1.0",
  "GitPython>=3.1.43",
  "PyGithub>=2.4.0",
  "graphifyy>=0.8.21",
  "networkx>=3.3",
  "openai>=1.0.0",
  "pydantic>=2.8.2",
  "rich>=13.7.1",
  "tenacity>=8.3.0",
  "typer>=0.12.3",
]

[project.optional-dependencies]
target = ["fastapi>=0.112.0", "uvicorn>=0.30.0"]
dev = ["pytest>=8.3.2", "pytest-asyncio>=0.23.8", "httpx>=0.27.0", "ruff>=0.6.2"]

[project.scripts]
sentinel = "sentinel.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests", "dummy_target/tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.hatch.build.targets.wheel]
packages = ["sentinel"]
